# pxcp

./: .cirrus.yml  LICENSE  Makefile  Makefile.in  README  README.md  acls.c  acls.h  config.h.in  configure  configure.ac  digest.c  digest.h  fletcher.c  fletcher.h  fsobj.c  fsobj.h  fstest.c  misc.c  misc.h  pxcp.c  pxcp.man  xxhash.c  xxhash.h
.github/workflows/: c-cpp.yml
